--- a/sass/element/_Gallery.scss
+++ b/sass/element/_Gallery.scss
@@ -45,7 +45,7 @@
 			display: none;
 			position:absolute;
 			background: white;
-			color: $primary;
+			color: var(--primary);
 			height: 100%;
 			width: 100%;
 			opacity: 0.5;
