--- a/sass/element/_Shortcuts.scss
+++ b/sass/element/_Shortcuts.scss
@@ -2,24 +2,25 @@
 .flex{
 	display: flex;
 }
-
 .flex-col{
 	flex-direction: column;
 }
-
 .flex-col-reverse{
 	flex-direction: column-reverse;
 }
-
 .justify-between{
 	justify-content: space-between;
 }
-
 .flex-shrink-0{
 	flex-shrink: 0;
 }
 .h-full{
 	height: 100%;
+}
+.truncate{
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 
