--- a/sass/element/balloon-css/_mixins.scss
+++ b/sass/element/balloon-css/_mixins.scss
@@ -12,7 +12,7 @@ $ARROW_DIRECTIONS: (
 
   width: 0;
   height: 0;
-  border: $balloon-arrow-size solid transparent;
+  border: var(--balloon-arrow-size) solid transparent;
   border-#{map-get($ARROW_DIRECTIONS, $direction)}-color: var(--balloon-color);
 }
 
@@ -28,8 +28,6 @@ $ARROW_DIRECTIONS: (
 
 @mixin normalized-text() {
   text-indent: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: normal;
   font-style: normal;
   text-shadow: none;
