--- a/sass/form/common/_Form.scss
+++ b/sass/form/common/_Form.scss
@@ -1,6 +1,6 @@
 .vlMargins{
-	margin-top: $form-row-margin-t;
-	margin-bottom: $form-row-margin-b;
+	margin-top: var(--form-row-margin-t);
+	margin-bottom: var(--form-row-margin-b);
 }
 
 .vlForm, .vlRows{ //to disable margin collapsing in div that are display:block
