--- a/sass/form/common/_Json.scss
+++ b/sass/form/common/_Json.scss
@@ -1,12 +1,12 @@
 .vlJson, .vlListe, .vlListeSelect{
 	.vlInputGroup:not(:first-child){
 		.vlFormControl, .vlInputPrepend, .vlInputAppend{
-			border-top: 1px solid $form-control-placeholder-color;
+			border-top: 1px solid var(--form-control-placeholder-color);
 		}
 	}
 }
 .vlJson{
 	.vlInputGroup .vlFormControl:nth-child(3){
-		border-left: 1px solid $form-control-placeholder-color;
+		border-left: 1px solid var(--form-control-placeholder-color);
 	}
 }
