--- a/sass/form/common/_TaggableInput.scss
+++ b/sass/form/common/_TaggableInput.scss
@@ -7,13 +7,12 @@
 		flex: 1 1 auto;
 		min-width: 0; //important for a Firefox flex bug where children were overflowing the parent		
 		flex-wrap: wrap;
-		min-height: $form-control-min-height;
+		min-height: var(--form-control-min-height);
 		align-items: center;
 	}
 	.vlSingle{
-		padding: $form-control-padding;
+		padding: var(--form-control-padding);
 		>div{
-			@include ellipsis1();
 			.icon-times{
 				color: gainsboro;
 				cursor: pointer;
@@ -25,15 +24,18 @@
 		}
 	}
 	.vlTags{
-		padding-top: calc(#{$form-control-padding-t} - 0.1rem);
-		padding-bottom: calc(#{$form-control-padding-b} - 0.1rem);
-		padding-left: calc(#{$form-control-padding-l} - 0.25rem);
-		padding-right: calc(#{$form-control-padding-r} - 0.25rem);
+		padding-top: calc(var(--form-control-padding-t) - 0.1rem);
+		padding-bottom: calc(var(--form-control-padding-b) - 0.1rem);
+		padding-left: calc(var(--form-control-padding-l) - 0.25rem);
+		padding-right: calc(var(--form-control-padding-r) - 0.25rem);
 		display: flex;
 		flex-wrap: wrap;
 		align-items: flex-end;
 		>div{
-			@include tagFilled($tags-bg-color);
+			background-color: var(--tags-color);
+			color: white;
+			font-weight: 700;
+			@include tag();
 		    padding: 0.1rem 0.5rem 0.1rem 0.2rem; //has to be after @include tag()
 			&.vlCustomLabel{ // to align x with customLabel, don't remove
 				display: flex;
