--- a/sass/md-outlined-variables.scss
+++ b/sass/md-outlined-variables.scss
@@ -1,47 +1,35 @@
-/**
- * Menus
- */
-$sidebar-breakpoint: md !default;
+:root{
+	/**
+	 * Spacing
+	 */
+	--form-row-margin-t: 1rem;
+	--form-row-margin-b: 1.5rem;
+	--form-control-padding-t: 0.6rem;
+	--form-control-padding-r: 0.8rem;
+	--form-control-padding-b: 0.6rem;
+	--form-control-padding-l: 0.8rem;
+	--form-control-padding: var(--form-control-padding-t) var(--form-control-padding-r) var(--form-control-padding-b) var(--form-control-padding-l);
+	--form-control-min-height: 2.7rem;
 
-/**
- * Colors
- */
-$form-primary-color: $primary !default;
-$form-field-error-color: #f56565 !default;
-$form-control-bg: #fff !default;
-$form-control-placeholder-color: gainsboro !default;
-$tags-bg-color: $form-primary-color !default;
-
-/**
- * Icons
- */
-$form-field-icon-width: 1.8rem !default;
-$form-field-icon-color: gainsboro !default;
-
-/**
- * Spacing
- */
-$form-row-margin-t: 1rem !default;
-$form-row-margin-b: 1.5rem !default;
-
-$form-control-padding-t: 0.6rem !default;
-$form-control-padding-r: 0.8rem !default;
-$form-control-padding-b: 0.6rem !default;
-$form-control-padding-l: 0.8rem !default;
-$form-control-padding: $form-control-padding-t $form-control-padding-r $form-control-padding-b $form-control-padding-l !default;
-
-$form-control-min-height: 2.7rem !default;
+	/**
+	 * Borders
+	 */
+	--form-control-border-radius: .25rem;
+	--form-control-border-color: gainsboro;
+	--form-control-border: 1px solid var(--form-control-border-color);
+	--form-control-border-color-focused: var(--form-primary-color);
+}
 
 /**
  * Label
  */
 $form-label-position: absolute !default;
 $form-label-position-t: 0.75rem !default;
-$form-label-position-l: $form-control-padding-l !default;
+$form-label-position-l: var(--form-control-padding-l);
 $form-label-focused-font-size: 80% !default;
 $form-label-focused-position-t: -0.5rem !default;
 $form-label-focused-position-l: 0.7rem !default;
-$form-label-focused-color: $form-control-bg !default;
+$form-label-focused-color: var(--form-control-bg);
 $form-label-icon-focused-position-l: $form-label-focused-position-l !default;
 $form-label-select-buttons-position-t: - 1.4rem !default;
 $form-label-select-buttons-focused-position-t: $form-label-select-buttons-position-t !default;
@@ -53,17 +41,5 @@ $form-label-trix-focused-position-t: $form-label-focused-position-t !default;
 /**
  * Borders
  */
-$form-control-border-radius: .25rem !default;
-$form-control-border-color: gainsboro !default;
-$form-control-border-color-focused: $form-primary-color !default;
 $form-control-border-width-focused: 2px !default;
-$form-control-box-shadow-focused: 0 0 0.1rem 0.2rem mix($form-primary-color, #fff, 25) !default;
-
-$form-control-border: 1px solid $form-control-border-color !default;
 $form-control-box-sizing: border-box !default;
-/**
- * Checkbox & Toggle
- */
-$form-checkbox-height: 1.3rem !default;
-$form-toggle-height: 1.44rem !default;
-$form-toggle-width: 2.7rem !default;
