--- a/sass/menu/classic/_Footer.scss
+++ b/sass/menu/classic/_Footer.scss
@@ -1,8 +1,8 @@
 .vl-footer{
 	>.vl-nav-item{
-		border-bottom: $nav-item-border;
+		border-bottom: var(--nav-item-border);
 		&:hover,&.active{
-			border-bottom: $nav-item-border-hover;
+			border-bottom: var(--nav-item-border-hover);
 		}
 	}
 }
