--- a/sass/menu/classic/_Sidebar.scss
+++ b/sass/menu/classic/_Sidebar.scss
@@ -1,16 +1,16 @@
 .vl-sidebar-l{
 	>.vl-nav-item{
-		border-left: $nav-item-border;
+		border-left: var(--nav-item-border);
 		&:hover,&.active{
-			border-left: $nav-item-border-hover;
+			border-left: var(--nav-item-border-hover);
 		}
 	}
 }
 .vl-sidebar-r{
 	>.vl-nav-item{
-		border-right: $nav-item-border;
+		border-right: var(--nav-item-border);
 		&:hover,&.active{
-			border-right: $nav-item-border-hover;
+			border-right: var(--nav-item-border-hover);
 		}
 	}
 }
