--- a/sass/md-filled-variables.scss
+++ b/sass/md-filled-variables.scss
@@ -30,7 +30,7 @@ $form-label-focused-font-size: 75% !default;
 $form-label-focused-font-weight: 700 !default;
 $form-label-focused-position-t: 0.1rem !default;
 $form-label-focused-position-l: 0.7rem !default;
-$form-label-icon-focused-position-l: calc(var(--form-field-icon-width) + $form-label-focused-position-l);
+$form-label-icon-focused-position-l: calc(var(--form-field-icon-width) + #{$form-label-focused-position-l});
 $form-label-select-buttons-position-t: - 1.4rem !default;
 $form-label-select-buttons-focused-position-t: - 1.3rem !default;
 $form-label-editor-position-t: 2.4rem + $form-label-position-t !default;
@@ -41,5 +41,5 @@ $form-label-trix-focused-position-t: 1.6rem + $form-label-focused-position-t !de
 /**
  * Borders
  */
-$form-control-border-bottom: 1px solid $form-control-border-color !default;
+$form-control-border-bottom: 1px solid var(--form-control-border-color) !default;
 $form-control-border-expanding: 0.125rem !default;
