--- a/sass/form/common/_Checkbox.scss
+++ b/sass/form/common/_Checkbox.scss
@@ -19,6 +19,13 @@
     >.vlInputWrapper{
         padding: var(--form-control-padding);
     }
+    &.vlHorizontalMutiCheckbox>.vlInputWrapper{
+        display: flex;
+        flex-wrap: wrap;
+        > * ~ * {
+            margin-left: 1rem;
+        }
+    }
 }
 
 .vlToggle,.vlToggleInput {
