Add success interaction after alert and minor bug fixes

--- a/sass/menu/_Dropdown.scss
+++ b/sass/menu/_Dropdown.scss
@@ -18,7 +18,7 @@
 	.vl-nav-item{
 		align-items: center;
 	}
-	&.vlOpenOnHover:hover .vlDropdownMenu{
+	&.vlOpenOnHover:hover>.vlDropdownMenu{
 		transform: scale(1);
 		opacity: 1;
 	}
