--- a/sass/element/_Popup.scss
+++ b/sass/element/_Popup.scss
@@ -4,6 +4,10 @@
     right: 0;
     z-index: 5000;
     overflow: auto;
+    border-radius: 0.5rem;
+    background-color: #fff;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
+    transition: all .3s ease;
 }
 .vlPopupClose{
     position: absolute;
