--- a/sass/element/elements.scss
+++ b/sass/element/elements.scss
@@ -14,6 +14,7 @@ $sidebar-breakpoint: md !default;
 :root {
 	--primary: #31475e;
 	--primary-darker: #135064;
+	--primary-lighter: #a9bbef;
 	--secondary: #359678;
 	--secondary-darker: #2d8066;
 
@@ -21,9 +22,10 @@ $sidebar-breakpoint: md !default;
 
 	--btn-padding-x: 1rem;
 	--btn-padding-y: 0.4rem;
-	--btn-border-radius: 0.25rem;
+	--btn-border-radius: 0.375rem;
 
 	--tags-color: var(--primary);
+	--tags-bg: var(--primary-lighter);
 
 	--query-filters-spacing: 2rem;
 
@@ -40,7 +42,6 @@ $sidebar-breakpoint: md !default;
 	/**
 	 * Icons
 	 */
-	--form-field-icon-width: 1.8rem;
 	--form-field-icon-color: gainsboro;
 
 	/**
@@ -65,7 +66,7 @@ $sidebar-breakpoint: md !default;
 @import 'ButtonLink';
 @import 'Tabs';
 @import 'Modal';
-@import 'SlidingPanel';
+@import 'Drawer';
 @import 'Popup';
 @import 'Alert';
 @import 'Badge';
