--- a/sass/menu/_Dropdown.scss
+++ b/sass/menu/_Dropdown.scss
@@ -1,40 +1,41 @@
 .vlDropdown{
 	position: relative;
 	cursor: pointer;
-	.vlDropdownToggler{
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-        width: 100%;
-        >a{            
-			display: flex;
-			align-items: center;
-        }	
-	}
 	.icon-down{
 		font-size: 70%;
 		color: gainsboro;
 	}
-	.vl-nav-item{
-		align-items: center;
-	}
-	&.vlOpenOnHover:hover>.vlDropdownMenu{
+	&.vlForcedOpen>.vlDropdownMenu, &.vlOpenOnHover:hover>.vlDropdownMenu{
 		transform: scale(1);
 		opacity: 1;
 	}
+}
+.vlDropdownToggler{
+	display: flex;
+	align-items: center;
+    width: 100%;
+    >a{            
+		display: flex;
+		align-items: center;
+    }	
 }
 .vlDropdownMenu {
 	position: absolute;
 	left: 0;
 	top: 100%;
-	background-color: white;
+	background-color: var(--body-color);
 	z-index: 105; //higher than sidebar
 	transform: scale(0);
 	transition: all .2s ease-in-out;
 	opacity: 0;
 	transform-origin: top left;
+	flex-direction: column;	
+	&:not(.vlNoBorder){
+		border: var(--form-control-border);
+	}
+	border-radius: var(--form-control-border-radius);
     &.vlMenuClosed{
-        display: block; //cancel mobile effect
+        display: flex; //cancel mobile effect
     }
 	&.vlDropdownMenuRight{
 		left: auto;
