--- a/sass/menu/_SidebarToggler.scss
+++ b/sass/menu/_SidebarToggler.scss
@@ -3,18 +3,34 @@
 	cursor: pointer;
 	font-size: 1.5rem;
 	text-align: center;
-	span:first-child{display: inline;}
-	span:last-child{display: none;}
+	>span{
+		display: inline;
+	}
+	.vlBlur{
+		display: none;
+	}
 	&.vlOpen{
 		align-self: center;
-		span:first-child{display: none;}
-		span:last-child{display: inline;}
+		>span{
+			display: none;
+		}
+		.vlBlur{
+			display: block;
+			position: fixed;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			left: 0;
+			z-index: 99; //less than sidebar
+			backdrop-filter: blur(8px);
+			background: rgba(0,0,0,0.2);
+		}
 	}
 }
 @include media-breakpoint-down($sidebar-breakpoint) {
 	.vlSidebarToggler{
 		display: flex;
+		align-items: center;
 		position: relative;
-		z-index: 110; //higher than sidebar
-	}	
+    }
 }
